--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "migrationfromjstots",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
+    "start": "tsc --watch ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
