change app.js to app.ts

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "migrationfromjstots",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "src/app.ts",
   "scripts": {
     "start": "tsc --watch ",
     "test": "echo \"Error: no test specified\" && exit 1"
